--- a/index.html
+++ b/index.html
@@ -13,32 +13,33 @@
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/my.js"></script>
 	<script type="text/javascript" src="js/mui.js"></script>
-    <!--tittle-->
+  <!--tittle-->
 	<title>CO2</title>
   </head>
   
   <body>
-    <!--top-->
-    <div class="top">
-      <h1>Hello World</h1>
-    </div>
-   
-    <!--content -->
-   <ul class="">
-     <li>1</li>
-     <li>2</li>
-     <li>3</li>
-   </ul>
-    <div class="center"> 
-       <buttom class="transparen">click me</buttom>
-    </div>
+  <div class="bg">
+  <!--top-->
+    <div class="top">  </div>
+    <ul class="mui-tabs ">
+      <li class="mui-active mui-btn mui-btn-flat"><a data-mui-toggle="tab" data-mui-controls="pane-default-1">Home</a></li>
+      <li class="mui-btn mui-btn-flat"><a data-mui-toggle="tab" data-mui-controls="pane-default-2">New</a></li>
+      <li class="mui-btn mui-btn-flat"><a data-mui-toggle="tab" data-mui-controls="pane-default-3">About</a></li>
+    </ul>
+   </div>
+  <!--content -->
+  
+  <div class="mui-tab-content">
+      <div class="mui-tab-pane mui-active" id="pane-default-1">Pane-1</div>
+      <div class="mui-tab-pane" id="pane-default-2">Pane-2</div>
+      <div class="mui-tab-pane" id="pane-default-3">Pane-3</div>
+  </div>
 
-<div id="mui-btn-flat">000</div>
+  <!--test -->
+  
 
-    <!--尾部-->
-    <div class="footerbar"></div>
-    <div class="footertext">© 2014-2015 Usb233, All rights reserved. MIT License</div>
-
+  
+  <!--尾部-->
+  
   </body>
-
 </html>
