--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<!--chrome通知栏变色-->
+    <!--主题色-->
     <meta name="theme-color" content="#4078C2" charset="UTF-8"/>
     <!--css-->
-	<link href="css/mui.css" rel="stylesheet" type="text/css"/>
-	<link href="css/my.css" rel="stylesheet" type="text/css"/>
-	<!--js-->
-	<script type="text/javascript" src="js/jquery.js"></script>
-	<script type="text/javascript" src="js/my.js"></script>
-	<script type="text/javascript" src="js/mui.js"></script>
-  <!--tittle-->
-	<title>CO2</title>
+  	<link href="css/mui.css" rel="stylesheet" type="text/css"/>
+	  <link href="css/my.css" rel="stylesheet" type="text/css"/>
+	  <!--js-->
+	  <script type="text/javascript" src="js/jquery.js"></script>
+	  <script type="text/javascript" src="js/my.js"></script>
+	  <script type="text/javascript" src="js/mui.js"></script>
+    <!--tittle-->
+	  <title>CO2</title>
   </head>
   
   <body>
@@ -26,9 +26,12 @@
       <li class="mui-btn mui-btn-flat"><a data-mui-toggle="tab" data-mui-controls="pane-default-2">New</a></li>
       <li class="mui-btn mui-btn-flat"><a data-mui-toggle="tab" data-mui-controls="pane-default-3">About</a></li>
     </ul>
-   </div>
+  </div>
   <!--content -->
-  
+  <div class="mui-panel">
+  <!-- content -->
+  233333333
+  </div>
   <div class="mui-tab-content">
       <div class="mui-tab-pane mui-active" id="pane-default-1">Pane-1</div>
       <div class="mui-tab-pane" id="pane-default-2">Pane-2</div>
