--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--主题色-->
-    <meta name="theme-color" content="#4078C2" charset="UTF-8"/>
+    <meta name="theme-color" content="#3f51b5" charset="UTF-8"/>
     <!--css-->
   	<link href="css/mui.css" rel="stylesheet" type="text/css"/>
 	  <link href="css/my.css" rel="stylesheet" type="text/css"/>
@@ -14,7 +14,7 @@
 	  <script type="text/javascript" src="js/my.js"></script>
 	  <script type="text/javascript" src="js/mui.js"></script>
     <!--tittle-->
-	  <title>CO2</title>
+	  <title>D2O</title>
   </head>
   
   <body>
