--- a/index.html
+++ b/index.html
@@ -16,33 +16,43 @@
     <!--tittle-->
 	  <title>CO2</title>
   </head>
-  
+
   <body>
   <div class="bg">
   <!--top-->
     <div class="top">  </div>
-    <ul class="mui-tabs ">
+    <ul class="mui-tabs">
       <li class="mui-active mui-btn mui-btn-flat"><a data-mui-toggle="tab" data-mui-controls="pane-default-1">Home</a></li>
       <li class="mui-btn mui-btn-flat"><a data-mui-toggle="tab" data-mui-controls="pane-default-2">New</a></li>
       <li class="mui-btn mui-btn-flat"><a data-mui-toggle="tab" data-mui-controls="pane-default-3">About</a></li>
     </ul>
   </div>
-  <!--content -->
-  <div class="mui-panel">
-  <!-- content -->
-  233333333
-  </div>
+
+  <!--content-->
   <div class="mui-tab-content">
-      <div class="mui-tab-pane mui-active" id="pane-default-1">Pane-1</div>
-      <div class="mui-tab-pane" id="pane-default-2">Pane-2</div>
-      <div class="mui-tab-pane" id="pane-default-3">Pane-3</div>
-  </div>
+      <!--home-->
+      <div class="mui-tab-pane mui-active" id="pane-default-1">
+        <div class="mui-panel">
+          2333
+        </div>
+      </div>
+      <!--new-->
+      <div class="mui-tab-pane" id="pane-default-2">
+        <div class="mui-panel">
+          66666
+        </div>
+      </div>
+      <!--about-->
+      <div class="mui-tab-pane" id="pane-default-3">
+        <div class="mui-panel">
+          hhh
+        </div>
+      </div>
+   </div>
+  <!--test-->
 
-  <!--test -->
+  <!--footer-->
   
 
-  
-  <!--尾部-->
-  
   </body>
 </html>
