--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <body>
   <div class="bg">
   <!--top-->
+    <div class="mui-text-display4 mui-text-white">hello</div>
     <div class="bottom-bg">  </div>
     <ul class="mui-tabs">
       <li class="mui-active mui-btn mui-btn-flat"><a data-mui-toggle="tab" data-mui-controls="pane-default-1">Home</a></li>
@@ -32,19 +33,26 @@
   <div class="mui-tab-content">
       <!--home-->
       <div class="mui-tab-pane mui-active" id="pane-default-1">
-        <div class="mui-panel">
+        <div class="mui-panel home">
+          2333
+        </div>
+        <div class="mui-panel home">
           2333
         </div>
       </div>
       <!--new-->
       <div class="mui-tab-pane" id="pane-default-2">
-        <div class="mui-panel">
+        <div class="mui-panel new">
           66666
         </div>
+        <div class="mui-panel new pic">
+          <img src="images/pic-1.png"/> 66666
+        </div>
+
       </div>
       <!--about-->
       <div class="mui-tab-pane" id="pane-default-3">
-        <div class="mui-panel">
+        <div class="mui-panel about">
           hhh
         </div>
       </div>
