--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	  <script type="text/javascript" src="js/jquery.js"></script>
 	  <script type="text/javascript" src="js/my.js"></script>
 	  <script type="text/javascript" src="js/mui.js"></script>
+    <script type="text/javascript" src="js/pic.js"></script>
       <!--tittle-->
 	  <title>D2O</title>
   </head>
@@ -30,8 +31,7 @@
         <li class="mui-btn mui-btn-flat"><a data-mui-toggle="tab" data-mui-controls="pane-default-3">About</a></li>
       </ul>
     </div>
-
-  <!--content-->
+    <!--content-->
     <div class="mui-tab-content">
       <!--home-->
       <div class="mui-tab-pane mui-active" id="pane-default-1">
@@ -59,6 +59,7 @@
       <!--new-->
       <div class="mui-tab-pane" id="pane-default-2">
         <div class="mui-panel new">
+          <img src="images/pic.jpg" data-src="images/pic-1.png" class="lazyload" />
           66666
         </div>
         <div class="mui-panel new pic-card">
