--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li class="mui-btn mui-btn-flat"><a data-mui-toggle="tab" data-mui-controls="pane-default-3">About</a></li>
       </ul>
     </div>
+
     <!--content-->
     <div class="mui-tab-content">
       <!--home-->
@@ -58,12 +59,11 @@
       </div>
       <!--new-->
       <div class="mui-tab-pane" id="pane-default-2">
-        <div class="mui-panel new">
+        <div class="mui-panel pic-card new">
           <img src="images/pic.jpg" data-src="images/pic-1.png" class="lazyload" />
-          66666
+          <p>666666666666666666666666666666666666666666666666666666666666666666666666666</p>
         </div>
-        <div class="mui-panel new pic-card">
-          <imggg src="images/pic-1.png"/>
+        <div class="mui-panel new">
           66666
         </div>
       </div>
