--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 	  <script type="text/javascript" src="js/my.js"></script>
 	  <script type="text/javascript" src="js/mui.js"></script>
     <script type="text/javascript" src="js/pic.js"></script>
-      <!--tittle-->
+    <!--tittle-->
 	  <title>D2O</title>
   </head>
 
   <body>
     <!--top-->
     <div class="bg">
-      <div class="mui-text-display4 mui-text-white">hello</div>
+      <div class="top-bg mui-text-display4 mui-text-white"></div>
       <div class="bottom-bg">  </div>
       <ul class="mui-tabs">
         <li class="mui-active mui-btn mui-btn-flat"><a data-mui-toggle="tab" data-mui-controls="pane-default-1">首页</a></li>
@@ -36,36 +36,72 @@
     <div class="mui-tab-content">
       <!--home-->
       <div class="mui-tab-pane mui-active" id="pane-default-1">
-      <div class="mui-panel home">
-        <div class="mui-text-caption mui-text-accent">
+        <div class="mui-panel home">
+          <div class="mui-text-caption mui-text-accent">
             xxxx-xx-xx
-        </div>
-        <div class="mui-text-display2 mui-text-black">
+          </div>
+          <div class="mui-text-display2 mui-text-black">
             Title
+          </div>
+          <div class="mui-text-subhead mui-text-black">
+            content  Nanowerk News) When a light wave penetrates a material, it is usually changed drastically. Scattering and diffraction leads to a superposition of waves, resulting in a complicated pattern of darker and brighter light spots inside the material. In specially tailored high-tech materials, which can locally amplify or absorb light, such effects can be completely suppressed. Calculations at TU Wien (Vienna University of Technology) have now shown that these materials allow new kinds of light waves, which have the same intensity everywhere inside the material, as if there was no wave interference at all (Nature Communications, "Constant-intensity waves and their modulation instability in non-Hermitian potentials").
+            Due to their unusual properties, these new solutions of the wave equation could be useful for technological applications.
+            A wave penetrates a material:
+            A wave penetrates a material: usually this leads to wave interference, to darker and brighter areas.
+            Obstacles Change the Wave
+            When a light wave travels through free space, its intensity can be the same everywhere. But as soon as it hits an obstacle, the wave is diffracted. At some points in space, the wave becomes brighter, in other places it becomes darker than it would have been without hitting the object. This is the reason we can see objects that do not emit light by themselves.
+            In recent years, however, experiments have been carried out with new materials which have the ability to modify light in a special way: they can locally amplify light, similar to a laser, or absorb light, like sunglasses do. “When such processes are possible, we have to employ a mathematical description of the light wave which is quite different from the one we use for normal, transparent materials,” says Professor Stefan Rotter (TU Wien). “In this case we speak of non-hermitian media.”
+            Read more: Novel material design for undistorted light waves 
+          </div>
         </div>
-        <div class="mui-text-subhead mui-text-black">
-          content  Nanowerk News) When a light wave penetrates a material, it is usually changed drastically. Scattering and diffraction leads to a superposition of waves, resulting in a complicated pattern of darker and brighter light spots inside the material. In specially tailored high-tech materials, which can locally amplify or absorb light, such effects can be completely suppressed. Calculations at TU Wien (Vienna University of Technology) have now shown that these materials allow new kinds of light waves, which have the same intensity everywhere inside the material, as if there was no wave interference at all (Nature Communications, "Constant-intensity waves and their modulation instability in non-Hermitian potentials").
-          Due to their unusual properties, these new solutions of the wave equation could be useful for technological applications.
-          A wave penetrates a material:
-          A wave penetrates a material: usually this leads to wave interference, to darker and brighter areas.
-          Obstacles Change the Wave
-          When a light wave travels through free space, its intensity can be the same everywhere. But as soon as it hits an obstacle, the wave is diffracted. At some points in space, the wave becomes brighter, in other places it becomes darker than it would have been without hitting the object. This is the reason we can see objects that do not emit light by themselves.
-          In recent years, however, experiments have been carried out with new materials which have the ability to modify light in a special way: they can locally amplify light, similar to a laser, or absorb light, like sunglasses do. “When such processes are possible, we have to employ a mathematical description of the light wave which is quite different from the one we use for normal, transparent materials,” says Professor Stefan Rotter (TU Wien). “In this case we speak of non-hermitian media.”
-          Read more: Novel material design for undistorted light waves 
-        </div>
-        </div>
-        <div class="mui-panel pic-card new">
+        <div class="mui-panel pic-card left">
           <img src="images/pic.jpg" data-src="images/pic-1.png" class="lazyload" />
           <p>666666666666666666666666666666666666666666666666666666666666666666666666666</p>
         </div>
-        <div class="mui-panel new">
+        <div class="mui-panel left">
           66666
         </div>
       </div>
-      <!--dev-->
+
+      <!--more-->
       <div class="mui-tab-pane" id="pane-default-2">
-        
+        <form name="jisuanqi" id="jsq" method="get"> 
+          <p> 第一个数： 
+            <input type="text" size="100" name="num1" value="" /> 
+          </p> 
+          <p> 第二个数： 
+            <input type="text" size="100" name="num2" value="" /> 
+          </p> 
+          <p> 计算结果： 
+            <input type="text" size="100" name="jieguo" onfocus="this.select()"/> 
+          </p> 
+          <p> 
+            <!--定义按钮--> 
+            <input type="button" class="btn" value="+" onClick="imyeah(0)"/> 
+            <input type="button" class="btn" value="-" onClick="imyeah(1)"/ > 
+            <input type="button" class="btn" value="*" onClick="imyeah(2)"/> 
+            <input type="button" class="btn" value="/" onClick="imyeah(3)"/> 
+          </p> 
+        </form>
+
+        <form name="lc" id="" method="get"> 
+          <p> l： 
+            <input type="text" size="100" name="ll" value="" /> 
+          </p> 
+          <p> c： 
+            <input type="text" size="100" name="cc" value="" /> 
+          </p> 
+          <p> f： 
+            <input type="text" size="100" name="ff" id="test"/> 
+          </p> 
+          <p> 
+            <!--定义按钮--> 
+            <input type="button" class="btn 1" value="+" onClick="lc"/> 
+            <div id="233">0</div>
+          </p> 
+        </form> 
       </div>
+
       <!--about-->
       <div class="mui-tab-pane" id="pane-default-3">
         <div class="mui-panel about">
@@ -74,7 +110,6 @@
           <blockquote>
             This is an example quotation that uses the blockquote tag.
           </blockquote>
-
         </div>
       </div>
 
