--- a/index.html
+++ b/index.html
@@ -86,18 +86,17 @@
 
         <form name="lc" id="" method="get"> 
           <p> l： 
-            <input type="text" size="100" name="ll" value="" /> 
+            <input type="text" size="100" name="l" value="" id="l" /> 
           </p> 
           <p> c： 
-            <input type="text" size="100" name="cc" value="" /> 
+            <input type="text" size="100" name="c" value="" id="c" />
           </p> 
           <p> f： 
-            <input type="text" size="100" name="ff" id="test"/> 
+            <input type="text" size="100" name="f" id="f"/> 
           </p> 
           <p> 
             <!--定义按钮--> 
             <input type="button" class="btn 1" value="+" onClick="lc"/> 
-            <div id="233">0</div>
           </p> 
         </form> 
       </div>
