--- a/index.html
+++ b/index.html
@@ -85,19 +85,21 @@
         </form>
 
         <form name="lc" id="" method="get"> 
-          <p> l： 
-            <input type="text" size="100" name="l" value="" id="l" /> 
-          </p> 
+       
+          <div class="input-field col s6">
+            <input value="1" id="1" type="text" name="l" class="validate"/>
+            <label class="active" for="first_name2">L</label>
+          </div>
           <p> c： 
             <input type="text" size="100" name="c" value="" id="c" />
           </p> 
           <p> f： 
             <input type="text" size="100" name="f" id="f"/> 
           </p> 
-          <p> 
             <!--定义按钮--> 
-            <input type="button" class="btn 1" value="+" onClick="lc"/> 
+            <input type="button" class="btn 1" value="+"/> 
           </p> 
+          
         </form> 
       </div>
 
