--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </div>
 
           <!--定义按钮--> 
-          <input type="button" class="btn btn-lc" value="计算"/> 
+          <button type="button" class="mui-btn mui-btn-primary mui-btn-raised btn-lc">计算</button> 
         </form>
 
       </div>
