--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <script type="text/javascript" src="js/jquery.js"></script><script type="text/javascript" src="js/jq-animate.js"></script>
   <script type="text/javascript" src="js/my.js"></script>
   <script type="text/javascript" src="js/pic.js"></script>
-
   <!--tittle-->
   <title>特斯拉线圈设计器</title>
 </head>
@@ -35,18 +34,18 @@
     <!-- LP计算模块 -->
     <div class="card">
       <img src="images/LP~.jpg" data-src="images/LP.jpg" class="lazyload lp-top"/>
-      <div class="img-title">title</div>
-      <form name="lp" method="get">
+      <img class="img-title" src="images/spark.gif"/>
+      <form class="lp" method="get">
         <legend>电弧长度估算:</legend><img class="show-ic" src="images/show-ic.png">
         <!-- L -->
         <div class="toggle">
           <label class="form-floating-label">电弧长度 (L):</label>
-          <input type="number" class="form-control" value="53" name="l" onchange="l()">
+          <input type="number" value="53" class="length">
           <span class="form-span">英寸</span>
           <br/>
           <!-- P -->
           <label class="form-floating-label">电源功率 (P):</label>
-          <input type="number" class="form-control" value="1000" name="p" onchange="p()">
+          <input type="number" value="1000" class="power">
           <span class="form-span">瓦特</span>
         </div>
       </form>
@@ -56,7 +55,7 @@
       <img src="images/LP~.jpg" data-src="images/LP.jpg" class="lazyload lp-top"/>
       <div class="img-title">title</div>
       <!-- LP计算模块 -->
-      <form name="lp" method="get" class="card-content">
+      <form name="lc" method="get" class="card-content">
         <legend>电弧长度估算:</legend><img class="show-ic" src="images/show-ic.png">
         <!-- L -->
         <div class="toggle">
