--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
 
     <!-- LP计算模块 -->
     <div class="card">
-      <svg width="300" height="212" class="zc">
-        <image xlink:href="images/ZC.svg" src="images/ZC.png" width="300" height="212"/>
-      </svg>
+      <img src="images/ZC.png" class="zc">
       <img class="img-title" src="images/ZC-title.png"/>
       <form method="get">
         <legend>电容组与变压器匹配:</legend>
