--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <!--css-->
   <link href="css/my.css" rel="stylesheet" type="text/css"/>
   <!--js-->
-  <script type="text/javascript" src="js/jquery.js"></script>
+  <script type="text/javascript" src="js/jquery.js"></script><script type="text/javascript" src="js/jq-animate.js"></script>
   <script type="text/javascript" src="js/my.js"></script>
   <script type="text/javascript" src="js/pic.js"></script>
+
   <!--tittle-->
   <title>特斯拉线圈设计器</title>
 </head>
@@ -28,23 +29,26 @@
       <a href="#">关于</a>
     </li>
   </ul>
+
   <!-- home content -->
   <div class="home">
     <!-- LP计算模块 -->
     <div class="card">
       <img src="images/LP~.jpg" data-src="images/LP.jpg" class="lazyload lp-top"/>
       <div class="img-title">title</div>
-      <form name="lp" method="get" class="card-content">
-        <legend>电弧长度估算:</legend>
+      <form name="lp" method="get">
+        <legend>电弧长度估算:</legend><img class="show-ic" src="images/show-ic.png">
         <!-- L -->
-        <label class="form-floating-label">电弧长度 (L):</label>
-        <input type="number" class="form-control" value="53" name="l" onchange="l()">
-        <span class="form-span">英寸</span>
-        <br/>
-        <!-- P -->
-        <label class="form-floating-label">电源功率 (P):</label>
-        <input type="number" class="form-control" value="1000" name="p" onchange="p()">
-        <span class="form-span">瓦特</span>
+        <div class="toggle">
+          <label class="form-floating-label">电弧长度 (L):</label>
+          <input type="number" class="form-control" value="53" name="l" onchange="l()">
+          <span class="form-span">英寸</span>
+          <br/>
+          <!-- P -->
+          <label class="form-floating-label">电源功率 (P):</label>
+          <input type="number" class="form-control" value="1000" name="p" onchange="p()">
+          <span class="form-span">瓦特</span>
+        </div>
       </form>
     </div>
 
@@ -53,20 +57,22 @@
       <div class="img-title">title</div>
       <!-- LP计算模块 -->
       <form name="lp" method="get" class="card-content">
-        <legend>电弧长度估算:</legend>
+        <legend>电弧长度估算:</legend><img class="show-ic" src="images/show-ic.png">
         <!-- L -->
-        <label class="form-floating-label">电弧长度 (L):</label>
-        <input type="number" class="form-control" value="53" name="l" onchange="l()">
-        <span class="form-span">英寸</span>
-        <br/>
-        <!-- P -->
-        <label class="form-floating-label">电源功率 (P):</label>
-        <input type="number" class="form-control" value="1000" name="p" onchange="p()">
-        <span class="form-span">瓦特</span>
+        <div class="toggle">
+          <label class="form-floating-label">电弧长度 (L):</label>
+          <input type="number" class="form-control" value="53" name="l" onchange="l()">
+          <span class="form-span">英寸</span>
+          <br/>
+          <!-- P -->
+          <label class="form-floating-label">电源功率 (P):</label>
+          <input type="number" class="form-control" value="1000" name="p" onchange="p()">
+          <span class="form-span">瓦特</span>
+        </div>
       </form>
     </div>
   </div>
 
-  <!-- aboutcontent -->
+  <!-- about-content -->
   <div class="about"></div>
 </body>
