--- a/index.html
+++ b/index.html
@@ -130,21 +130,21 @@
         <div class="toggle">
           <!-- C -->  
           <label>电容量:</label>
-          <input type="number" value="0.047" class="C"/>  
+          <input type="number" value="0.047" class="iC"/>  
           <span class="form-span">uF</span>
           <br/>  
           <!-- V -->  
           <label>耐压:</label>
-          <input type="number" value="1600" class="V"/>  
+          <input type="number" value="1600" class="iV"/>  
           <span class="form-span">V</span>
           <hr/>
-           <!-- L -->  
+          <!-- L -->  
           <label>串联数量:</label>
-          <input type="number" value="11" class="L"/>
+          <input type="number" value="11" class="iX"/>
           <br/>  
           <!-- P -->  
           <label>并联数量:</label>
-          <input type="number" value="3" class="P"/>
+          <input type="number" value="3" class="iY"/>
           <hr/>
           <!-- re-C -->  
           <label>电容量:</label>
