--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- home content -->
   <div class="home">
     <!-- LP计算模块 -->  
-    <div class="card">
+    <div class="card LP">
       <img src="images/LP~.jpg" data-src="images/LP.jpg" class="lazyload"/>  
       <img class="img-title" src="images/LP-title.gif"/>  
       <form method="get">
@@ -165,5 +165,5 @@
 
   </div>
   <!-- about-content -->
-  <div class="about"></div>
+  <div class="about">zzz</div>
 </body>
